--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,26 @@
 {
     "name": "krytenuk/recaptchav2",
-    "description": "ZF2 module for using Google reCaptcha version 2",
+    "description": "ZF3 module for using Google reCaptcha version 2",
     "require": {
-        "php": ">=5.5.0",
-        "zendframework/zend-form": "^2.3.0",
-        "zendframework/zend-view": "^2.3.0",
-        "zendframework/zend-validator": "^2.3.0",
-        "zendframework/zend-stdlib": "^2.3.0",
-        "zendframework/zend-http": "^2.3.0"
+        "php": "^5.6 || ^7.0",
+        "zendframework/zend-form": "^2.12",
+        "zendframework/zend-view": "^2.10",
+        "zendframework/zend-validator": "^2.10",
+        "zendframework/zend-stdlib": "^3.2",
+        "zendframework/zend-http": "^2.8"
     },
     "authors": [{
             "name": "Garry Childs",
             "email": "info@freedomwebservices.net",
             "homepage": "https://www.freedomwebservices.net/"
         }],
-    "keywords": ["zf2", "logger", "debugger", "freedom"],
+    "keywords": ["zf3", "recaptcha", "google", "freedom"],
     "autoload": {
         "psr-4": {
-            "FwsReCaptchaV2\\": ""
+            "FwsReCaptchaV2\\": "src/"
         }
     },
     "license": "BSD-3-Clause",
     "type": "library",
-    "homepage": "https://github.com/krytenuk/logger"
+    "homepage": "https://github.com/krytenuk/recaptchav2"
 }
