--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "krytenuk/recaptchav2",
-    "description": "Zend Fframework module for using Google reCaptcha version 2",
+    "description": "Zend Framework module for using Google reCaptcha version 2",
     "require": {
         "php": "^5.6 || ^7.0",
         "zendframework/zend-form": "^2.12",
