--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
     "description": "Zend Framework module for using Google reCaptcha version 2",
     "require": {
         "php": "^5.6 || ^7.0",
-        "zendframework/zend-form": "^2.12",
-        "zendframework/zend-view": "^2.10",
-        "zendframework/zend-validator": "^2.10",
-        "zendframework/zend-stdlib": "^3.2",
-        "zendframework/zend-http": "^2.8"
+        "laminas/laminas-form": "^2.12",
+        "laminas/laminas-view": "^2.10",
+        "laminas/laminas-validator": "^2.10",
+        "laminas/laminas-stdlib": "^3.2",
+        "laminas/laminas-http": "^2.8"
     },
     "authors": [{
             "name": "Garry Childs",
