--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
     "name": "krytenuk/recaptchav2",
     "description": "Laminas/Zend Framework module for using Google reCaptcha version 2",
     "require": {
-        "php": "^7.0 || ^8.0",
-        "laminas/laminas-form": "^2.12",
-        "laminas/laminas-view": "^2.10",
-        "laminas/laminas-validator": "^2.10",
-        "laminas/laminas-stdlib": "^3.2",
-        "laminas/laminas-http": "^2.8"
+        "php": "^7.0 || ~8.0.0 || ~8.1.0",
+        "laminas/laminas-form": "^3.1",
+        "laminas/laminas-view": "^2.13",
+        "laminas/laminas-validator": "^2.15",
+        "laminas/laminas-stdlib": "^3.6",
+        "laminas/laminas-http": "^2.15"
     },
     "authors": [{
             "name": "Garry Childs",
